# adverse-media-screener

./: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml  requirements.txt  run_e2e.py
config/: __init__.py  prompts.py  settings.py
docs/: SCIENTIFIC_REPORT.md
src/: __init__.py  main.py
src/chains/: entity_extraction.py  name_matching.py  report_generation.py  sentiment_analysis.py
src/docs/: REPORT.md
src/graph/: state.py  workflow.py
src/llm/: __init__.py  cost_tracker.py  factory.py
src/models/: __init__.py  inputs.py  outputs.py  schemas.py
src/nodes/: base.py  extraction.py  matching.py  report.py  sentiment.py
src/observability/: tracer.py
src/outputs/: report_20251120223455.json  report_20251120223917.json  report_20251120232755.json
src/tests/: __init__.py  test_article_fetcher.py  test_cases.json  test_entity_extraction.py  test_integration.py
src/utils/: __init__.py  article_fetcher.py  logger.py  validators.py
